--- a/Frontend/src/styles/Home.css
+++ b/Frontend/src/styles/Home.css
@@ -36,9 +36,12 @@ body{
     font-weight: 700;
     margin: 0;
     letter-spacing: -1px;
+  
+    color: #ffffff;
     background: linear-gradient(90deg, #ffffff, #bfbfbf);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; 
+    background-clip: text; 
+    -webkit-background-clip: text;  
+    -webkit-text-fill-color: transparent;
 }
 .home-header p {
     font-size: 1.15rem;
